# Yomi

./: .gitignore  README.md  mass_test.py  mirrors_cache.json  pyproject.toml  requirements.txt  sites_test.json  test_suite.py
dontdelete/: sites_backup.json  sites_test.json
tools/: aggregator.py  fetch-names.py  fix.py  merge-db.py
yomi/: __init__.py  api.py  cli.py  core.py  database.py  discovery.py  sites.json  sites_test.json
yomi/extractors/: common.py
yomi/utils/: aggregator.py  anilist.py  archive.py  auto_discovery.py  metadata.py  raw-names.json
