[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yomi"
version = "0.3.0"
description = "The Universal Hybrid-Engine Manga Downloader"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "aiohttp",
    "aiofiles",
    "beautifulsoup4",
    "lxml",
    "rich",
    "pillow",
    "img2pdf",
    "requests"
]

[project.scripts]
yomi = "yomi.cli:cli"